TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Fix installer (after configuration UI)
 * Add module for relaying events
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)

2008-02-13 MickeM
 + Added string_length to [Settings] as well (used internally) for all "injected" buffers.
 * Fixed issue with scripts result truncated efter 1024 chars 
    (now they return "all" output and thus you can use the NRPE settings I adde yesterday :)
 + Added hostname setting to [NSCA] section (must have been braindead when I did not add it before)
 + Added to NSCA truncates output when to long.

2008-02-12 MickeM
 + Added new option for the [NRPE] section string_length which is the length of the NRPE strings 
   (notice you need to recompile the check_nrpe to match this value)
 * Improved exception handling in the PDH collector (hopefully less deadlocks)

2008-02-11 MickeM
 + Added encryption support for NSCA module (about half of the algorithms are avalible, 
     if someone wants to use one not available let me know, and I will try to add it)

2008-02-09 MickeM
 + New module CheckExternalScripts to handle 1, external script (similar to the old NRPE but in its own module)
   - Can Check batch/vbs/programs/*
   - Works with NSCA module (if you don't want to have NRPE at the same time)
   - Simpler syntax (discarded old and added new section for alias)
   - Started to add "sample alias" to ease initial setup and give some nice ideas (please provide me with feedback on them)

2008-02-08 MickeM
 + Added some more default catch handlers (on the "core" side of plugin-calls).

2008-02-07 MickeM
 + Added default catch handlers to all wrapped plugin calls.

2008-02-05 MickeM
 * Fixed issue with checkEventLog (sometimes you got the wrong message back)

2008-02-04 MickeM
 *** Happy Birthday bogi!! :)
 * Fixed issues with performance counter rendering (mainly checkDisk)

2008-02-03 MickeM